@@ -1,4 +1,6 @@
 Changes for 1.6.1.3
+* Getting Decoration Placer to auto place all images nicely on the map if they match the territory names or if they are not decorations. Also including detailed instructions. (veqryn)
+
 * Got the Decoration Placer to work with placing PUs, decorations, name images, capitals, vc's, and all other image types and text files. (veqryn)
 
 * Creating new map utility, "Decoration Placer", which allows a map maker to put decorations and other images on a map, recording their points in a text file. (veqryn)
